--- a/CACFLEX/src/CAC.mxml
+++ b/CACFLEX/src/CAC.mxml
@@ -1,29 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<s:Application xmlns:fx="http://ns.adobe.com/mxml/2009" 
-			   xmlns:s="library://ns.adobe.com/flex/spark" 
-			   xmlns:mx="library://ns.adobe.com/flex/mx" minWidth="955" minHeight="600">
-	<fx:Declarations>
-		<!-- Place non-visual elements (e.g., services, value objects) here -->
-	</fx:Declarations>
-	<s:VGroup x="0" y="0" width="100%" height="100%">
-		<s:BorderContainer width="100%" height="100%">
-			<s:backgroundFill>
-				<s:LinearGradient rotation="90">
-					<s:GradientEntry color="0XFFFFFF"/>
-					<s:GradientEntry color="0x4863A0"/>
-				</s:LinearGradient>
-			</s:backgroundFill>
-			<s:HGroup x="0" y="0" width="100%" height="40">
-				<s:BorderContainer width="100%" height="100%">
-					<s:backgroundFill>
-						<s:LinearGradient rotation="90">
-							<s:GradientEntry color="0x4863A0"/>
-							<s:GradientEntry color="0XFFFFFF"/>
-						</s:LinearGradient>
-					</s:backgroundFill>
-				</s:BorderContainer>
-			</s:HGroup>
-		</s:BorderContainer>
-	</s:VGroup>
-	
+<s:Application xmlns:fx="http://ns.adobe.com/mxml/2009"
+			   xmlns:s="library://ns.adobe.com/flex/spark"
+			   xmlns:mx="library://ns.adobe.com/flex/mx"
+			   width="100%" height="100%" color="#0A0B0B" fontFamily="Arial" fontSize="12" xmlns:util="util.*" xmlns:modules="modules.*">
+	<fx:Style source="CAC.css"/>
+	<modules:Workspace width="100%" height="100%"/>	
 </s:Application>
